[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/art/rooms/staircase.png" type="Texture" id=1]
[ext_resource path="res://src/Visuals/Rooms/Staircase.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/MenuFont.tres" type="DynamicFont" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 20 )

[node name="Staircase" type="Node2D"]
script = ExtResource( 2 )

[node name="StairWayUpper" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="StairWayUpper"]
position = Vector2( 0, -32 )
texture = ExtResource( 1 )
hframes = 2

[node name="Label" type="Label" parent="StairWayUpper"]
visible = false
margin_left = -27.0
margin_right = 27.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 3 )
text = "Go Down"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StairWayUpper"]
position = Vector2( 0, -20 )
shape = SubResource( 1 )

[node name="StairWayCellar" type="Area2D" parent="."]
position = Vector2( 0, 96 )

[node name="Sprite" type="Sprite" parent="StairWayCellar"]
position = Vector2( 0, -32 )
texture = ExtResource( 1 )
hframes = 2

[node name="Label" type="Label" parent="StairWayCellar"]
visible = false
margin_left = -21.0
margin_right = 21.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 3 )
text = "Go Up"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StairWayCellar"]
position = Vector2( 0, -20 )
shape = SubResource( 1 )
[connection signal="body_entered" from="StairWayUpper" to="." method="_on_StairWayUpper_body_entered"]
[connection signal="body_exited" from="StairWayUpper" to="." method="_on_StairWayUpper_body_exited"]
[connection signal="body_entered" from="StairWayCellar" to="." method="_on_StairWayCellar_body_entered"]
[connection signal="body_exited" from="StairWayCellar" to="." method="_on_StairWayCellar_body_exited"]
